@startuml
'https://plantuml.com/class-diagram
@startuml
hide methods
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


<font color=Black size=15><b>Built by WeByte ©</font>
endheader
title <b>US19-DOMAIN MODEL\n

class Company{
    }

    class NHSReport{
    -observed values
    -estimated values
        }
        class NHS{

           }

Company "1" -- "*" NHSReport : generates >
Administrator "1" -- "*" NHSReport : sends >
NHSReport "1" -- "1" NHS : is sent to >



@enduml